# DepGuard

./: README.md  cli.py  history.py  pyproject.toml  requirements.txt  web.py
examples /: render.yaml  requirements.txt  web.py
examples /src/: cli.py
src/: __init__.py  __intit__.py  ai_summary.py  report.py  scanner.py
static/: style.css
static /: style.css
templates/: index.html  results.html
tests/: test_scanner.py
